--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,17 @@ services:
     volumes:
       - .:/var/www/html
     depends_on:
-      - db
+      - db-cache
     networks:
       - caching_proxy_net
 
-  db:
+  db-cache:
     image: redis:8.2.1
     container_name: redis-cache
     ports:
       - 6379:6379
     restart: unless-stopped
+    command: redis-server --requirepass ${REDIS_PASSWORD}
     networks:
       - caching_proxy_net
 
