--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "pablo-santos/caching-proxy",
     "require": {
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "predis/predis": "^3.2"
     },
     "autoload": {
         "psr-4": {
