feat: adiciona variáveis para porta e servidor de origem
mudança de abordagem, ao invés de usa terminal para definição de servidor de origem das requisições e definição da porta, tudo será feito no .env, visto que o servidor estará rodando no container

--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,6 @@
 REDIS_HOST="db-cache"
-REDIS_PASSWORD=
+REDIS_PASSWORD=""
+
+# ORIGIN is the URL of the server to which the requests will be forwarded
+ORIGIN=""
+HOST_PORT=8000
