--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     container_name: php-app
     ports:
-      - 8000:80
+      - ${HOST_PORT}:80
     volumes:
       - .:/var/www/html
     depends_on:
