--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,3 @@
 RewriteEngine On
 
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ index.php?url=$1 [QSA]
+RewriteRule ^(.*)$ index.php?url=$1 [QSA,L]
