--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,7 @@
 REDIS_HOST="db-cache"
 REDIS_PASSWORD=""
+REDIS_PORT=6379
 
 # ORIGIN is the URL of the server to which the requests will be forwarded
-ORIGIN=""
+ORIGIN="https://jsonplaceholder.typicode.com/posts"
 HOST_PORT=8000
